# bertha-rs

./: Cargo.toml  README.md  clippy.toml
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
