[workspace]
members = ["client", "server", "common"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "json", "time", "uuid", "ipnetwork"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134" }
time = {  version = "0.3.37", features = ["macros", "serde"] }
uuid = { version = "1.11.0", features = ["serde", "v7"] }
thiserror = "2.0.9"
derive_builder = "0.20.2"
