[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
rmp-serde = { workspace = true }
bytes = { workspace = true }
