[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
rmp-serde = { workspace = true }
axum = { version = "0.8.1", features = ["ws"] }
anyhow = "1.0.97"
futures-util = "0.3.31"
